# rootApproximation

./: CMakeLists.txt  README.md  bisection.h  bisection.plt  brent.h  dekker.h  iteration.h  main.cpp  newton.h  newton.plt  newton_convergence_error.plt  secant.h  secant.plt
